# Final_Project_Group_2_batch_57

./: README.md  config.py  engine.py  main.py  model_meta.pkl  model_tiket.pkl  pyproject.toml  requirements.txt  train_model.py  utils.py
