[project]
name = "final-project-group-2-batch-57"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.3",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "streamlit>=1.56.0",
    "xgboost>=3.2.0",
]
